# my-mimic

./: .coveragerc  .pre-commit-config.yaml  README.md  pyproject.toml
mr/: __init__.py  mime.py
mr/config/: __init__.py
mr/states/: __init__.py  interface.py
mr/states/implementations/: memory.py  redis.py  temp.py
mr_mime/: mime.py
mr_mime/config/: __init__.py
mr_mime/states/: factory.py  interface.py  type.py
mr_mime/states/implements/: memory.py
tests/: test_mime.py
tests/config/: test_config.py
tests/states/implementations/: test_memory.py  test_redis.py  test_temp.py
